--- a/scripts/signup.html
+++ b/scripts/signup.html
@@ -11,6 +11,11 @@
 <body>
     <section class="form-sec">
         <div class="form-cont">
+            <div class="form-title">
+                <h2 class="form-title-h">
+                    Let's get Started!
+                </h2>
+            </div>
             <form action="action.xml" method="get">
                 <input type="text" name="username" id="username" placeholder="Username" required>
                 <input type="text" name="email" id="email" placeholder="Email" required>
