--- a/forms/signup.html
+++ b/forms/signup.html
@@ -16,13 +16,15 @@
                     Let's get Started!
                 </h2>
             </div>
-            <form action="action.xml" method="get">
+
+            <form action="../scripts/regact.php" method="post">
                 <input type="text" name="username" id="username" placeholder="Username" required>
                 <input type="text" name="email" id="email" placeholder="Email" required>
                 <input type="text" name="password" id="password" placeholder="Password" required>
 
-                <input type="submit" class="create-acc-btn" value="Create Account" name="submit" id="submit">
+                <input type="submit" class="create-acc-btn" value="Create Account" name="signup" id="submit">
             </form>
+
         </div>
     </section>
 </body>
