--- a/forms/signup.html
+++ b/forms/signup.html
@@ -22,7 +22,7 @@
                 <input type="text" name="email" id="email" placeholder="Email" required>
                 <input type="text" name="password" id="password" placeholder="Password" required>
 
-                <input type="submit" class="create-acc-btn" value="Create Account" name="signup" id="submit">
+                <input type="submit" class="create-acc-btn" value="Create Account" name="signup" id="signup">
             </form>
 
         </div>
