--- a/forms/signup.html
+++ b/forms/signup.html
@@ -17,7 +17,8 @@
                 </h2>
             </div>
 
-            <form action="../scripts/regact.php" method="post">
+            <form action="../scripts/signup.php" method="post">
+                <input type="text" name="fullname" id="fullname" placeholder="Fullname" required>
                 <input type="text" name="username" id="username" placeholder="Username" required>
                 <input type="text" name="email" id="email" placeholder="Email" required>
                 <input type="text" name="password" id="password" placeholder="Password" required>
