--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
   
   <title>Home - Travelogue</title>
   
-  <link rel="stylesheet" href="css/style-home.css">
+  <link rel="stylesheet" href="./css/style-hotel.css">
   
   <script src="https://kit.fontawesome.com/e1e8a204ee.js" crossorigin="anonymous">
   </script>
