--- a/welcome.html
+++ b/welcome.html
@@ -34,7 +34,15 @@
             </nav>
     </header>
     <section class="sec1">
-
+      <div class="intro-div">
+        <h1 class="intro-h">
+          Lorem ipsum dolor
+        </h1>
+        <p class="intro-p">Lorem ipsum dolor sit amet.</p>
+        <a href="#" class="intro-cta">
+          Explore Places
+        </a>
+      </div>
     </section>
     <footer>
 
