--- a/welcome.html
+++ b/welcome.html
@@ -37,6 +37,18 @@
 
   <aside class="sidebar">
 
+    <div class="nav-cls-div">
+      <button type="button" class="nav-cls-btn">
+        x
+      </button>
+    </div>
+
+    <div class="form-title-div">
+      <h1>
+        Log-in to your Account
+      </h1>
+    </div>
+
     <div class="sidebar-form-cont">
       <form action="#" method="post" class="sidebar-form">
 
@@ -46,13 +58,26 @@
         <label for="password">Password</label>
         <input type="text" name="password" class="ip-text" required>
 
-        <input type="submit" value="submit" class="ip-login">
+        <input type="submit" value="Log In" class="ip-login">
 
       </form>
     </div>
 
-    <div class="query-section">
+    <div class="sign-up-cont">
+      <p>Don't have an Account?</p>
+      <a href="#" class="sign-up">Create Account</a>
+      </div>
 
+    <div class="query-div">
+
+      <a href="#" class="help">
+        <span class="material-icons">
+          help
+        </span>
+        <span class="a-label">
+          Help
+        </span>
+      </a>
     </div>
     
   </aside>
