--- a/welcome.html
+++ b/welcome.html
@@ -73,10 +73,10 @@
     <div class="query-div">
 
       <a href="#" class="help">
-        <span class="material-icons">
+        <span class="material-icons foot-ic">
           help
         </span>
-        <span class="a-label">
+        <span class="">
           Help
         </span>
       </a>
