--- a/welcome.html
+++ b/welcome.html
@@ -24,10 +24,10 @@
             </div>
             <div class="nav-profile">
             
-            <div class="avatar" onclick="navOpen()">
+            <div class="avatar" >
               <img src="images/defdp.jpg" alt="" class="">
               
-              <span class="material-icons avatar-ico">
+              <span class="material-icons avatar-ico" onclick="navOpen()">
                 account_circle
               </span>
             </div>
