--- a/home.html
+++ b/home.html
@@ -33,6 +33,13 @@
       <a href="">GALLERY</a>
     </div>
     
+    <div class="avatar" onclick="">
+      <img src="images/defdp.jpg" alt="" class="">
+      <span class="material-icons avatar-ico">
+        account_circle
+      </span>
+    </div>
+
     </div>
     </nav>
 
