--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
     </div>
     
     <div class="avatar" onclick="">
-      <img src="images/defdp.jpg" alt="" class="">
+      <img src="images/dp/bean-lisa.jpg" alt="" class="">
       <span class="material-icons avatar-ico">
         account_circle
       </span>
@@ -45,6 +45,8 @@
 
 </header> 
 
+<!-- ######## Side bar ######## -->
+
 <aside>
 
   <div class="aside-cont">
@@ -53,8 +55,13 @@
 
     <a href="#" class="acc-link">
       <div class="acc-avatar">
-        <img class="user-dp" src="./images/hero-img.webp" alt="display picture">
+        <img class="user-dp" src="./images/dp/bean-lisa.jpg" alt="display picture">
       </div>
+
+      <span class="avatar-title">
+      Account
+      </span>
+
     </a>
 
   </div>
