--- a/welcome.html
+++ b/welcome.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="./css/welcome.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400&family=Space+Grotesk&display=swap" rel="stylesheet">
   
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/e1e8a204ee.js" crossorigin="anonymous">
-    </script>
+    
     <title>
         Travelogue
     </title>
 </head>
+
 <body>
+
     <header>
         <nav class="nav-panel">
             <div class="logo-container">
@@ -58,7 +61,7 @@
         <input type="text" name="username" class="ip-text" required>
 
         <label for="password">Password</label>
-        <input type="text" name="password" class="ip-text" required>
+        <input type="password" name="password" class="ip-text" required>
 
         <input type="submit" value="Log In" class="ip-login">
 
