MC: signup.htm/css, .css files

--- a/home.html
+++ b/home.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="author" content="Advoidh Biju (Adwaith-B, Advoidh-B)">
 
   <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400&family=Space+Grotesk&display=swap" rel="stylesheet">
   
@@ -113,7 +116,7 @@
       <div class="card-action">
         <div class="loc-details">
           <p>
-            Lorem ipsum
+            Alps Range
           </p>
           <span>
             Sweden
@@ -130,10 +133,10 @@
       <div class="card-action">
         <div class="loc-details">
           <p>
-            Lorem ipsum
+            Caucasus Mountains
           </p>
           <span>
-            Sweden
+            Georgia
           </span>
         </div>
         <a href="#" class="">
@@ -147,10 +150,10 @@
       <div class="card-action">
         <div class="loc-details">
           <p>
-            Lorem ipsum
+            Alps low ranges
           </p>
           <span>
-            Sweden
+            Austria
           </span>
         </div>
         <a href="#" class="">
@@ -164,10 +167,10 @@
       <div class="card-action">
         <div class="loc-details">
           <p>
-            Lorem ipsum
+            Mount Alps
           </p>
           <span>
-            Sweden
+            Switzerland
           </span>
         </div>
         <a href="#" class="">
@@ -181,10 +184,10 @@
       <div class="card-action">
         <div class="loc-details">
           <p>
-            Lorem ipsum
+            Duestance
           </p>
           <span>
-            Sweden
+            Finland
           </span>
         </div>
         <a href="#" class="">
@@ -198,10 +201,10 @@
       <div class="card-action">
         <div class="loc-details">
           <p>
-            Lorem ipsum
+            Moamma
           </p>
           <span>
-            Sweden
+            West virginia
           </span>
         </div>
         <a href="#" class="">
