--- a/welcome.html
+++ b/welcome.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta name="author" content="Advoidh Biju (Adwaith-B, Advoidh-B)">
+
     <link rel="stylesheet" href="./css/welcome.css">
+
+    <link rel="icon" type="image/x-icon" href="./images/dp/logo.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400&family=Space+Grotesk&display=swap" rel="stylesheet">
   
@@ -17,8 +22,9 @@
 </head>
 
 <body>
-
+  
     <header>
+      
         <nav class="nav-panel">
             <div class="logo-container">
               <a href="#" class="logo">
@@ -70,7 +76,7 @@
 
     <div class="sign-up-cont">
       <p>Don't have an Account?</p>
-      <a href="#" class="sign-up">Create Account</a>
+      <a href="./forms/signup.html" class="sign-up">Create Account</a>
       </div>
 
     <div class="query-div">
@@ -88,6 +94,8 @@
   </aside>
 
     <section class="sec1">
+
+
       <div class="intro-div">
 
         <h1 class="intro-h">
