--- a/forms/signup.html
+++ b/forms/signup.html
@@ -42,8 +42,9 @@
 
                 <label for="password" >Password</label>
                 <input type="text" name="password" id="password"  required>
-
-                <input type="submit" class="create-acc-btn" value="Create Account" name="signup" id="signup">
+                <a href="../home.html">
+                <input type="submit" class="create-acc-btn" value="Create Account" name="signup" id="signup" href="../home.html">
+                </a>
             </form>
 
             <div class="login">
