--- a/welcome.html
+++ b/welcome.html
@@ -102,7 +102,7 @@
           Your adventure starts today.
         </h1>
 
-        <p class="intro-p">Lorem ipsum dolor sit amet the quick brown fox.</p>
+        <p class="intro-p">Explore the most stunning places across the globe.</p>
 
         <a href="./home.html" class="intro-cta">
           <span class="link-txt">
@@ -136,10 +136,13 @@
           </a>
         </div>
         
+        <div class="social-links">
+          <p>&copy; Advoidh B - <span class="date"></span></p>
+        </div>
       </div>
       
     </footer>
 
-    <script src="./scripts/main.js"></script>
+    <script src="./scripts/welcome.js"></script>
 </body>
 </html>
