--- a/forms/signup.html
+++ b/forms/signup.html
@@ -42,9 +42,11 @@
 
                 <label for="password" >Password</label>
                 <input type="text" name="password" id="password"  required>
-                <a href="../home.html">
-                <input type="submit" class="create-acc-btn" value="Create Account" name="signup" id="signup" href="../home.html">
-                </a>
+                
+                <button type="submit" class="create-acc-btn" value="" name="signup" id="signup">
+                    Create Account
+                </button>
+                
             </form>
 
             <div class="login">
