--- a/home.html
+++ b/home.html
@@ -70,24 +70,29 @@
   </div>
 
   <div class="nav-cont">
-    <a href="#">
+    <a href="#" class="nav-ico">
       <i class="material-icons">home</i>
       <span class="nav-label">Home</span>
     </a>
 
-    <a href="#">
+    <a href="#" class="nav-ico">
       <i class="material-icons">search</i>
       <span class="nav-label">Search</span>
     </a>
 
-    <a href="#">
+    <a href="#" class="nav-ico">
       <i class="material-icons">book</i>
       <span class="nav-label">Bookings</span>
     </a>
 
-    <a href="#">
+    <a href="#" class="nav-ico">
       <i class="material-icons">settings</i>
       <span class="nav-label">Settings</span>
+    </a>
+
+    <a href="http://localhost/Travelogue/forms/admin-panel.html" class="ad">
+      <i class="material-icons">admin_panel_settings</i>
+      <span class="nav-label">Administrator</span>
     </a>
   </div>
 
