--- a/home.html
+++ b/home.html
@@ -70,22 +70,22 @@
   </div>
 
   <div class="nav-cont">
-    <a href="#" class="nav-ico">
+    <a href="#" >
       <i class="material-icons">home</i>
       <span class="nav-label">Home</span>
     </a>
 
-    <a href="#" class="nav-ico">
+    <a href="#" >
       <i class="material-icons">search</i>
       <span class="nav-label">Search</span>
     </a>
 
-    <a href="#" class="nav-ico">
+    <a href="#">
       <i class="material-icons">book</i>
       <span class="nav-label">Bookings</span>
     </a>
 
-    <a href="#" class="nav-ico">
+    <a href="#">
       <i class="material-icons">settings</i>
       <span class="nav-label">Settings</span>
     </a>
