--- a/forms/admin-panel.html
+++ b/forms/admin-panel.html
@@ -92,7 +92,7 @@
                 SEC-I CREDENTIAL UPDATION
              </h1>
              <p>Note: Update each record individually below.</p>
-            <input type="text" name="username" placeholder="Existing username" required>
+            <input type="text" name="username" placeholder="Existing username">
         </div>
 
         <div>
@@ -116,7 +116,7 @@
         <div>
             <br>
             <p>Note: Fillout all fields above to activate.</p>
-            <input type="submit" value="BULK UPDATE ( &#9888; affects all values above )" name="up_all">
+            <input type="submit" value="BULK DATA UPDATE ( &#9888; affects all values above)" name="up_all">
         </div>
 
         <div>
@@ -125,11 +125,18 @@
         </div>
         <div>
             <input type="text" name="id" placeholder="Existing ID" disabled>
-            <input type="text" name="username" placeholder="Existing Username" >
+            <input type="text" name="username" placeholder="Existing Username">
         </div>
         <div>
-            <button type="submit" name="del_all">&#9888; DELETE RECORD</button>
+            <input type="submit" name="dell_all" value="Delete All">
             </div>
+            <br>
+            <br>
+        <div>
+            <a href="http://localhost/travelogue/scripts/viewer.php">
+                Go to DB panel
+            </a>
+        </div>
         </form>
         </div>
     </section>
