--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
 
   <div class="account-card">
 
-    <a href="#" class="acc-link">
+    <a href="http://localhost/travelogue/forms/signup.html" class="acc-link">
       <div class="acc-avatar">
         <img class="user-dp" src="./images/dp/bean-lisa.jpg" alt="display picture">
       </div>
@@ -90,7 +90,7 @@
       <span class="nav-label">Settings</span>
     </a>
 
-    <a href="http://localhost/Travelogue/forms/admin-panel.html" class="ad">
+    <a href="http://localhost/Travelogue/forms/admin-panel.html" target="_blank" class="ad">
       <i class="material-icons">admin_panel_settings</i>
       <span class="nav-label">Administrator</span>
     </a>
