--- a/forms/admin-panel.html
+++ b/forms/admin-panel.html
@@ -35,7 +35,7 @@
   }
   section {
     background: var(--bg-white);
-    width: 60%;
+    width: 100%;
   }
   .cr {
         font-size: 0.8rem;
@@ -96,42 +96,16 @@
         </div>
 
         <div>
-            <input type="text" name="uname_n" placeholder="New Username">
-            <input type="submit" value="UPDATE USERNAME" name="up_uname">
-        </div>
-
-        <div>
             <input type="text" name="fname_n" placeholder="New Fullname">
             <input type="submit" value="UPDATE FULLNAME" name="up_fname">
-        </div>
-
-        <div>
-            <input type="text" name="email_n" placeholder="New Email">
-            <input type="submit" value="UPDATE EMAIL" name="up_email">
-        </div>
-        <div>
-            <input type="text" name="pass_n" placeholder="New Password">
-            <input type="submit" value="UPDATE PASSWORD" name="up_pass">
-        </div>
-        <div>
-            <br>
-            <p>Note: Fillout all fields above to activate.</p>
-            <input type="submit" value="BULK DATA UPDATE ( &#9888; affects all values above)" name="up_all">
-        </div>
-
-        <div>
-            <h2>SEC-II DELETION</h2>
-            <p>Note: Set username for rows to delete. If empty, all empty fields will be deleted.</p>
-        </div>
-        <div>
-            <input type="text" name="id" placeholder="Existing ID" disabled>
-            <input type="text" name="username" placeholder="Existing Username">
-        </div>
-        <div>
-            <input type="submit" name="dell_all" value="Delete All">
             </div>
-            <br>
-            <br>
+        <div>
+            <input type="text" name="uname_n" placeholder="New Username">
+            <input type="submit" value="UPDATE Username" name="up_uname">
+        </div>
+
+        <br>
+        <br>
         <div>
             <a href="http://localhost/travelogue/scripts/viewer.php">
                 Go to DB panel
