MC: destinations page and script

--- a/dests/destination.html
+++ b/dests/destination.html
@@ -16,10 +16,19 @@
 
 </head>
 <body>
+
     <section class="left">
         
         <div class="img-gallery">
-            ds
+            <img src="../images/hero-img.webp" class="img def-img">
+            <img src="../images/news-img1.jpeg" class="img">
+            <img src="../images/range4.jpeg" class="img">
+            <img src="../images/range4.jpeg" class="img">
+        </div>
+        <div class="switch-cont">
+            <a href="#" onclick="change(0)">1</a>
+            <a href="#" onclick="change(1)">2</a>
+            <a href="#" onclick="change(3)">3</a>
         </div>
     </section>
 
@@ -51,5 +60,7 @@
             </div>
         </div>
     </main>
+
+    <script src="../scripts/destinations_.js"></script>
 </body>
 </html>
