script update: destination.html

--- a/dests/destination.html
+++ b/dests/destination.html
@@ -20,10 +20,10 @@
     <section class="left">
         
         <div class="img-gallery">
-            <img src="../images/hero-img.webp" class="img def-img">
-            <img src="../images/news-img1.jpeg" class="img">
-            <img src="../images/range4.jpeg" class="img">
-            <img src="../images/range4.jpeg" class="img">
+            <img src="" class="img def-img">
+            <img src="" class="img">
+            <img src="" class="img">
+            <img src="" class="img">
         </div>
         <div class="switch-cont">
             <a href="#" onclick="change(0)">1</a>
@@ -35,10 +35,10 @@
     <main class="right">
 
         <div class="title-cont">
-            <h1 id="not">
+            <h1 id="mainT">
                 Norway
             </h1>
-            <p id="nor-p">
+            <p id="subT">
                 Land of the morning sun
             </p>
         </div>
