--- a/home.html
+++ b/home.html
@@ -116,7 +116,7 @@
   
   <div class="cards-container">
     
-    <div class="cards">
+    <div class="cards" onclick="dest('sw', 'Sweden')">
       <img src="images/range1.jpeg" alt="1">
       <div class="card-action">
         <div class="loc-details">
@@ -133,7 +133,7 @@
       </div>
     </div>
     
-    <div class="cards">
+    <div class="cards" onclick="dest('nwr', 'Norway')">
       <img src="images/range2.jpeg" alt="1">
       <div class="card-action">
         <div class="loc-details">
@@ -307,6 +307,6 @@
 
   </div>
 </footer>
-  <script src="./scripts/main.js"></script>
+  <script src="./scripts/hotel-script.js"></script>
 </body>
 </html>
