destination.html: MC

--- a/dests/destination.html
+++ b/dests/destination.html
@@ -18,7 +18,13 @@
 <body>
 
     <section class="left">
-        
+        <div class="back">
+            <a href="../home.html" class="back-btn">
+                <i class="material-icons">
+                    keyboard_arrow_left
+                </i>
+            </a>
+        </div>
         <div class="img-gallery">
             <img src="" class="img def-img">
             <img src="" class="img">
@@ -26,9 +32,9 @@
             <img src="" class="img">
         </div>
         <div class="switch-cont">
-            <a href="#" onclick="change(0)">1</a>
-            <a href="#" onclick="change(1)">2</a>
-            <a href="#" onclick="change(3)">3</a>
+            <a href="#" onclick="change(0)"></a>
+            <a href="#" onclick="change(1)"></a>
+            <a href="#" onclick="change(3)"></a>
         </div>
     </section>
 
@@ -39,23 +45,32 @@
                 Norway
             </h1>
             <p id="subT">
-                Land of the morning sun
             </p>
         </div>
 
         <div class="desc">
             <p id="desc-p">
-                Lorem ipsum dolor sit amet dolor sit amet. Pahelius vehicular sit amet. Lorem ipsum dolor sit amet dolor sit amet. Pahelius vehicular sit amet.
+                Lorem ipsum dolor sit amet dolor sit amet. Pahelius vehicular sit amet. Lorem ipsum dolor sit amet dolor sit amet. Pahelius vehicular sit amet.ipsum dolor sit amet dolor sit amet. Pahelius vehicular sit amet. Lorem ipsum dolor sit amet dolor sit amet. Pahelius vehicular sit amet
+                ipsum dolor sit amet dolor sit amet. Pahelius vehicular sit amet. Lorem ipsum dolor sit amet dolor sit amet. 
             </p>
         </div>
 
         <div class="usr-actions">
             <div class="actions-cont">
+
                 <a href="#saved" id="saved">
-                    <i class="material-icons">saved</i>
+                    <span class="material-icons" >
+                        favorite
+                    </span> 
                 </a>
-                <a href="#continue">
-                    Proceed
+
+                <a href="#continue" id="proceed">
+                    <span class="material-icons" >
+                        book
+                    </span>
+                    <span class="ic-label">
+                        Proceed
+                    </span>
                 </a>
             </div>
         </div>
