--- a/dests/destination.html
+++ b/dests/destination.html
@@ -65,19 +65,13 @@
                 <label for="bad">
                     <input type="radio" name="radio">
                     <span class=" ic-rate ic-label">
-                        Bad
-                    </span>
-                </label>
-                <label for="good">
-                    <input type="radio" name="radio">
-                    <span class="ic-rate ic-label">
-                        Good
+                        Negative <i>(12%)</i>
                     </span>
                 </label>
                 <label for="vgood">
                     <input type="radio" name="radio">
                     <span class="ic-rate ic-label">
-                        Excellent
+                        Excellent <i>(50%)</i>
                     </span>
                 </label>
                 
@@ -88,7 +82,7 @@
             <div class="flight-hrs">
                 <i class="material-icons">flight</i>
                 <span class="flight-time ic-label">
-                    10 h, 30 min(s)
+                    10 hour(s)
                 </span>
             </div>
 
