--- a/home.html
+++ b/home.html
@@ -116,15 +116,15 @@
   
   <div class="cards-container">
     
-    <div class="cards" onclick="dest('sw', 'Sweden')">
-      <img src="images/range1.jpeg" alt="1">
+    <div class="cards" onclick="dest('swi', 'Alps, Switzerland')">
+      <img src="./images/loc/swi/1.jpeg" alt="1">
       <div class="card-action">
         <div class="loc-details">
           <p>
             Alps Range
           </p>
           <span>
-            Sweden
+            Switzerland
           </span>
         </div>
           <a href="#" class="">
@@ -133,15 +133,15 @@
       </div>
     </div>
     
-    <div class="cards" onclick="dest('nwr', 'Norway')">
-      <img src="images/range2.jpeg" alt="1">
+    <div class="cards" onclick="dest('nwr', 'Skarstind, Norway')">
+      <img src="images/loc/nwr/1.jpeg" alt="1">
       <div class="card-action">
         <div class="loc-details">
           <p>
-            Caucasus Mountains
+            Skarstind
           </p>
           <span>
-            Georgia
+            Norway
           </span>
         </div>
         <a href="#" class="">
