MC New file: hotel.html

--- a/dests/destination.html
+++ b/dests/destination.html
@@ -94,7 +94,7 @@
                     </span> 
                 </a>
 
-                <a href="#continue" id="proceed">
+                <a href="./hotels.html" id="proceed">
                     <span class="material-icons" >
                         book
                     </span>
