login/signup okay

--- a/welcome.html
+++ b/welcome.html
@@ -76,7 +76,7 @@
 
     <div class="sign-up-cont">
       <p>Don't have an Account?</p>
-      <a href="./forms/signup.html" class="sign-up">Create Account</a>
+      <a href="./forms/signup.php" class="sign-up">Create Account</a>
       </div>
 
     <div class="query-div">
