--- a/dests/destination.html
+++ b/dests/destination.html
@@ -63,7 +63,7 @@
             <form action="#" method="post" class="ratings-cont">
                 
                 <label for="bad">
-                    
+                    <span class="material-icons rating">mood</span>
                     <span class="ic-rate ic-label">
                      <!-- Rating Here -->   
                     </span>
