--- a/welcome.html
+++ b/welcome.html
@@ -35,10 +35,11 @@
             
             <div class="avatar" >
               <img src="images/defdp.jpg" alt="" class="">
-              
-              <span class="material-icons avatar-ico" onclick="navOpen()">
+              <a href="./forms/signup.php">
+              <span class="material-icons avatar-ico" onclick="">
                 account_circle
               </span>
+              </a>
             </div>
             </div>
             </nav>
