--- a/welcome.html
+++ b/welcome.html
@@ -105,7 +105,7 @@
 
         <p class="intro-p">Explore the most stunning places across the globe.</p>
 
-        <a href="./home.html" class="intro-cta">
+        <a href="./forms/signup.php" class="intro-cta">
           <span class="link-txt">
           Explore Places 
           </span>
