Major static update

--- a/welcome.html
+++ b/welcome.html
@@ -35,7 +35,7 @@
             
             <div class="avatar" >
               <img src="images/defdp.jpg" alt="" class="">
-              <a href="./forms/signup.php">
+              <a href="./forms/signup.php.html">
               <span class="material-icons avatar-ico" onclick="">
                 account_circle
               </span>
@@ -77,7 +77,7 @@
 
     <div class="sign-up-cont">
       <p>Don't have an Account?</p>
-      <a href="./forms/signup.php" class="sign-up">Create Account</a>
+      <a href="./forms/signup.php.html" class="sign-up">Create Account</a>
       </div>
 
     <div class="query-div">
@@ -105,7 +105,7 @@
 
         <p class="intro-p">Explore the most stunning places across the globe.</p>
 
-        <a href="./forms/signup.php" class="intro-cta">
+        <a href="./home.php.html" class="intro-cta">
           <span class="link-txt">
           Explore Places 
           </span>
