--- a/forms/signup.php.html
+++ b/forms/signup.php.html
@@ -1,34 +1,3 @@
-<?php 
-session_start();
-
-	include("../php/connection.php");
-	include("../php/functions.php");
-
-
-	if($_SERVER['REQUEST_METHOD'] == "POST")
-	{
-		//something was posted
-		$user_name = $_POST['user_name'];
-		$email = $_POST['email'];
-		$password = $_POST['password'];
-
-		if(!empty($user_name) && !empty($password) && !is_numeric($user_name))
-		{
-
-			//save to database
-			$user_id = random_num(20);
-			$query = "insert into users (user_id,user_name,email,password) values ('$user_id','$user_name','$email','$password')";
-
-			mysqli_query($con, $query);
-
-			header("Location: http://localhost/travelogue/forms/login.php");
-			
-		}else
-		{
-			echo "<script>alert('Error: Invalid Details. Please retry.');</script>";
-		}
-	}
-?>
 
 
 <!DOCTYPE html>
@@ -81,7 +50,7 @@ session_start();
 
             <div class="login">
                 <p>Existing User?</p>
-                <a href="login.php" class="login-btn">Log In</a>
+                <a href="login.php.html" class="login-btn">Log In</a>
             </div>
 
         </div>
