--- a/home.php.html
+++ b/home.php.html
@@ -10,6 +10,8 @@
 
   <meta name="author" content="Advoidh Biju (Adwaith-B, Advoidh-B)">
 
+  <link rel="icon" type="image/x-icon" href="./images/dp/logo.png">
+
   <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@300;400&family=Space+Grotesk&display=swap" rel="stylesheet">
   
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
